--- a/Ui/Ui/Ui.csproj
+++ b/Ui/Ui/Ui.csproj
@@ -86,6 +86,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="viewModel\analyzisViewModel.cs" />
+    <Compile Include="viewModel\ListReportsViewModel.cs" />
     <Compile Include="views\Analysis.xaml.cs">
       <DependentUpon>Analysis.xaml</DependentUpon>
     </Compile>
