--- a/Ui/Ui/Ui.csproj
+++ b/Ui/Ui/Ui.csproj
@@ -85,6 +85,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="converter2.cs" />
     <Compile Include="viewModel\analyzisViewModel.cs" />
     <Compile Include="viewModel\ListReportsViewModel.cs" />
     <Compile Include="views\Analysis.xaml.cs">
