--- a/Dl/App.config
+++ b/Dl/App.config
@@ -18,16 +18,16 @@
         <value>aa1opekvwuadigp</value>
       </setting>
       <setting name="RDS_USERNAME" serializeAs="String">
-        <value>avishome</value>
+        <value>admin</value>
       </setting>
       <setting name="RDS_PASSWORD" serializeAs="String">
-        <value>1234123412341234aaaa</value>
+        <value>33QLnKrhhk7Ubwr</value>
       </setting>
       <setting name="RDS_HOSTNAME" serializeAs="String">
-        <value>aa1opekvwuadigp.cwop46zdozfc.us-east-2.rds.amazonaws.com:1433</value>
+        <value>database-2.camdfqht0pg9.us-east-1.rds.amazonaws.com:1433</value>
       </setting>
       <setting name="RDS_PORT" serializeAs="String">
-        <value />
+        <value >1433</value>
       </setting>
     </Dl.Properties.Settings>
   </userSettings>
