--- a/Ui/Ui/Ui.csproj
+++ b/Ui/Ui/Ui.csproj
@@ -99,8 +99,8 @@
       <DependentUpon>ImageView.xaml</DependentUpon>
     </Compile>
     <Compile Include="viewModel\analyzisViewModel.cs" />
+    <Compile Include="viewModel\FrameViewModel.cs" />
     <Compile Include="viewModel\linarChartViewModel.cs" />
-    <Compile Include="viewModel\ListReportsViewModel.cs" />
     <Compile Include="views\Analysis.xaml.cs">
       <DependentUpon>Analysis.xaml</DependentUpon>
     </Compile>
@@ -161,20 +161,12 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="MainWindow.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="views\listOfReports.xaml.cs">
       <DependentUpon>listOfReports.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
-      <SubType>Code</SubType>
     </Compile>
     <Page Include="views\ReportForm.xaml">
       <SubType>Designer</SubType>
