--- a/Ui/Ui/packages.config
+++ b/Ui/Ui/packages.config
@@ -5,9 +5,11 @@
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net472" />
   <package id="MaterialDesignColors" version="1.2.2" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="3.0.1" targetFramework="net472" />
+  <package id="MetadataExtractor" version="2.3.1" targetFramework="net472" />
   <package id="Microsoft.Maps.MapControl.WPF" version="1.0.0.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="Prism.Core" version="7.2.0.1422" targetFramework="net472" />
   <package id="Stateless" version="5.0.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
+  <package id="XmpCore" version="6.1.10" targetFramework="net472" />
 </packages>
